# dm-api-gateway

./: README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
src/: auth.py  config.py  decorator.py  handlers.py  main.py  network.py  processing.py
src/datastructures/: users.py
src/services/: devices.py  energy_consumption.py  payments.py  users.py  water_consumption.py
