[tool.poetry]
name = "dm-api-gateway"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
pre-commit = "^3.6.2"
docker = "^7.0.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.3"
pyjwt = "^2.8.0"
async-timeout = "^4.0.3"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
